Adding A function to remove personal info in acordance to GDPR.

--- a/BERTtopicSpacy.ipynb
+++ b/BERTtopicSpacy.ipynb
@@ -271,6 +271,46 @@
     "df= pd.read_csv(r'csv/all_cleaned_pdf.csv')\n",
     "df.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Removing any personal information to anonymize data  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load spaCy model for Named Entity Recognition (NER)\n",
+    "nlp = spacy.load(\"en_core_web_sm\")\n",
+    "\n",
+    "# Function to remove personal names, dates, and numbers\n",
+    "def remove_sensitive_info(text):\n",
+    "    if not isinstance(text, str):\n",
+    "        return \"\"  # Handle non-string values\n",
+    "\n",
+    "    doc = nlp(text)\n",
+    "\n",
+    "    # Remove PERSON names using spaCy NER\n",
+    "    words = [token.text for token in doc if token.ent_type_ != \"PERSON\"]\n",
+    "\n",
+    "    # Remove dates and numbers\n",
+    "    cleaned_text = \" \".join(words)\n",
+    "    cleaned_text = re.sub(r'\\b\\d{1,4}[-/]\\d{1,2}[-/]\\d{1,4}\\b', '', cleaned_text)  # Remove dates (YYYY-MM-DD, DD/MM/YYYY)\n",
+    "    cleaned_text = re.sub(r'\\b\\d+\\b', '', cleaned_text)  # Remove standalone numbers\n",
+    "\n",
+    "    return cleaned_text.strip()\n",
+    "\n",
+    "# Apply function to remove names, personal info, dates, and numbers from df['sentence_clean']\n",
+    "df['sentence_clean'] = df['sentence'].apply(remove_sensitive_info)\n",
+    "\n",
+    "# Display cleaned dataframe\n",
+    "display(df.head())"
+   ]
   }
  ],
  "metadata": {
