Made some changes, Prepping the text data for fitting.

--- a/BERTtopicSpacy.ipynb
+++ b/BERTtopicSpacy.ipynb
@@ -311,6 +311,173 @@
     "# Display cleaned dataframe\n",
     "display(df.head())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. Prepare Your Text Data\n",
+    "We clean up the text\n",
+    "- Remove the name of city, country, geography for better outcome\n",
+    "- Remove special characters (only letters)\n",
+    "- Convert to lower case\n",
+    "- Remove stop words\n",
+    "- Remove words of only one or 2 letters ('a', 'I', at,...)\n",
+    "- Remove very short sentences\n",
+    "- Remove urls \n",
+    "- use stemming\n",
+    "- do duplicate sentences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load spaCy's English NER model\n",
+    "nlp = spacy.load(\"en_core_web_sm\")\n",
+    "\n",
+    "# Function to remove geographic entities (cities, countries, locations)\n",
+    "def remove_geographical_entities(text):\n",
+    "    if not isinstance(text, str):\n",
+    "        return \"\"  # Handle missing or non-string values\n",
+    "    \n",
+    "    doc = nlp(text)\n",
+    "    filtered_tokens = [token.text for token in doc if token.ent_type_ not in [\"GPE\", \"LOC\", \"FAC\"]]\n",
+    "    \n",
+    "    return \" \".join(filtered_tokens)\n",
+    "\n",
+    "# Apply function to remove cities, countries, and geography\n",
+    "df['sentence_clean'] = df['sentence'].apply(remove_geographical_entities)\n",
+    "\n",
+    "# Display a few cleaned sentences\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ensure necessary NLTK resources are downloaded\n",
+    "download('wordnet')\n",
+    "download('stopwords')\n",
+    "\n",
+    "# Load stopwords (fully remove stopwords first)\n",
+    "stop_words = set(stopwords.words('english'))\n",
+    "\n",
+    "# Minimum word length threshold\n",
+    "minWordSize = 4\n",
+    "\n",
+    "# Initialize the WordNetLemmatizer and PorterStemmer\n",
+    "lemmatizer = WordNetLemmatizer()\n",
+    "stemmer = PorterStemmer()\n",
+    "\n",
+    "# Preprocessing function to clean sentences\n",
+    "def preprocess_text(text):\n",
+    "    if not isinstance(text, str):\n",
+    "        return \"\"  # Handle missing or non-string values\n",
+    "    \n",
+    "    # Remove URLs (http, https, www, etc.)\n",
+    "    text = re.sub(r'http\\S+|www\\S+|https\\S+', '', text, flags=re.MULTILINE)\n",
+    "    \n",
+    "    # Normalize Unicode characters\n",
+    "    text = unicodedata.normalize('NFKD', text)\n",
+    "    \n",
+    "    # Replace non-alphabetic characters with a space\n",
+    "    text = re.sub(r'[^a-zA-Z\\s]', ' ', text)\n",
+    "\n",
+    "    # Convert text to lowercase and split into words\n",
+    "    words = text.lower().split()\n",
+    "\n",
+    "    # Remove stopwords first\n",
+    "    filtered_words = [word for word in words if word not in stop_words]\n",
+    "\n",
+    "    # Apply lemmatization\n",
+    "    lemmatized_words = [lemmatizer.lemmatize(word) for word in filtered_words]\n",
+    "\n",
+    "    # Apply stemming after lemmatization\n",
+    "    stemmed_words = [stemmer.stem(word) for word in lemmatized_words]\n",
+    "\n",
+    "    # Remove short words after stopword removal\n",
+    "    final_words = [w for w in stemmed_words if len(w) >= minWordSize]\n",
+    "\n",
+    "    # Remove duplicate words within each sentence\n",
+    "    unique_words = list(dict.fromkeys(final_words))  # Preserves order but removes duplicates\n",
+    "\n",
+    "    # Ensure proper spacing between words\n",
+    "    return \" \".join(unique_words)\n",
+    "\n",
+    "# Apply preprocessing function to clean sentences\n",
+    "df['sentence_clean'] = df['sentence_clean'].apply(preprocess_text)\n",
+    "\n",
+    "# Identify and remove duplicate sentences\n",
+    "sentence_counts = Counter(df['sentence_clean'])\n",
+    "\n",
+    "# Remove sentences that appear multiple times\n",
+    "df = df[df['sentence_clean'].map(sentence_counts) == 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Display the first element of the cleaned text\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['sentence_clean'].is_unique"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[df['sentence_clean'].str.len() >= 15]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### To see how data cleaning looks "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the output path\n",
+    "output_path = r\"cleaned_data.csv\"\n",
+    "\n",
+    "# Save the cleaned DataFrame to CSV\n",
+    "df.to_csv(output_path, index=False, encoding='utf-8')\n",
+    "\n",
+    "print(f\" Cleaned DataFrame saved to: {output_path}\")"
+   ]
   }
  ],
  "metadata": {
