changing link to folders.

--- a/BERTtopicSpacy.ipynb
+++ b/BERTtopicSpacy.ipynb
@@ -104,7 +104,7 @@
     "nlp_fr = spacy.load(\"fr_core_news_sm\")  # French\n",
     "\n",
     "# Folder containing the PDFs\n",
-    "pdf_folder = r\"Studies\"\n",
+    "pdf_folder = r\"papers\"\n",
     "output_csv_path = r\"csv/all_cleaned_pdf.csv\"\n",
     "\n",
     "# Compile regex patterns for efficiency\n",
