Adding markdown to start fitting

--- a/BERTtopicSpacy.ipynb
+++ b/BERTtopicSpacy.ipynb
@@ -478,6 +478,21 @@
     "\n",
     "print(f\" Cleaned DataFrame saved to: {output_path}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4. Initialize and Fit BERTopic\n",
+    "The good thing with BERTopic is that is does most of the work automatically (Meaning, I do not need to bore you to death with details about how it works behind te scenes.)\n",
+    "\n",
+    "We need to do 3 things\n",
+    "1. Initialize BERTopic model\n",
+    "2. 'Fit' the model -> this  means: run the model, as you would run a simple linear regression\n",
+    "3. Look at the topics via \n",
+    "\n",
+    "To get started, let's just use the default settings."
+   ]
   }
  ],
  "metadata": {
