Downloading the language models for french and dutch.

--- a/BERTtopicSpacy.ipynb
+++ b/BERTtopicSpacy.ipynb
@@ -43,7 +43,8 @@
     "    - scipy\n",
     "    - tqdm\n",
     "pip install pdfplumber bertopic nltk pandas spacy numpy matplotlib wordcloud gensim scikit-learn scipy tqdm wordsegment\n",
-    "\n",
+    "python -m spacy download fr_core_web_sm\n",
+    "python -m spaCy download nl_core_web_md\n",
     "Use the following Python version 3.12.0 otherwise the code will not work due to spacy.\n",
     "\"\"\""
    ]
@@ -79,9 +80,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[WinError 3] The system cannot find the path specified: 'papers'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 151\u001b[0m\n\u001b[0;32m    148\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAll PDFs processed! CSV saved at: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00moutput_csv_path\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    150\u001b[0m \u001b[38;5;66;03m# Run the function to process all PDFs\u001b[39;00m\n\u001b[1;32m--> 151\u001b[0m \u001b[43mprocess_all_pdfs\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpdf_folder\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moutput_csv_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    153\u001b[0m \u001b[38;5;66;03m# Load CSV and display first few rows\u001b[39;00m\n\u001b[0;32m    154\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(output_csv_path)\n",
+      "Cell \u001b[1;32mIn[7], line 133\u001b[0m, in \u001b[0;36mprocess_all_pdfs\u001b[1;34m(pdf_folder, output_csv_path)\u001b[0m\n\u001b[0;32m    130\u001b[0m all_text_data \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m    132\u001b[0m \u001b[38;5;66;03m# Get list of PDF files\u001b[39;00m\n\u001b[1;32m--> 133\u001b[0m pdf_files \u001b[38;5;241m=\u001b[39m [f \u001b[38;5;28;01mfor\u001b[39;00m f \u001b[38;5;129;01min\u001b[39;00m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlistdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpdf_folder\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mif\u001b[39;00m f\u001b[38;5;241m.\u001b[39mendswith(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m.pdf\u001b[39m\u001b[38;5;124m\"\u001b[39m)]\n\u001b[0;32m    135\u001b[0m \u001b[38;5;66;03m# Use multiprocessing to process PDFs in parallel\u001b[39;00m\n\u001b[0;32m    136\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m ProcessPoolExecutor() \u001b[38;5;28;01mas\u001b[39;00m executor:\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 3] The system cannot find the path specified: 'papers'"
+     ]
+    }
+   ],
    "source": [
     "# Ensure nltk sentence tokenizer is downloaded\n",
     "nltk.download('punkt', quiet=True)\n",
