--- a/BERTtopicSpacy.ipynb
+++ b/BERTtopicSpacy.ipynb
@@ -13,16 +13,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\\nNeeded dependancies:\\n    - spacy\\n    - pdfplumber\\n    - bertopic\\n    - pandas\\n    - numpy\\n    - matplotlib\\n    - wordcloud\\n    - nltk\\n    - gensim\\n    - scikit-learn\\n    - scipy\\n    - tqdm\\npip install pdfplumber bertopic nltk pandas spacy numpy matplotlib wordcloud gensim scikit-learn scipy tqdm wordsegment\\n'"
+       "'\\nNeeded dependancies:\\n    - spacy\\n    - pdfplumber\\n    - bertopic\\n    - pandas\\n    - numpy\\n    - matplotlib\\n    - wordcloud\\n    - nltk\\n    - gensim\\n    - scikit-learn\\n    - scipy\\n    - tqdm\\npip install pdfplumber bertopic nltk pandas spacy numpy matplotlib wordcloud gensim scikit-learn scipy tqdm wordsegment\\npython -m spacy download fr_core_web_sm\\npython -m spaCy download nl_core_web_md\\nUse the following Python version 3.12.0 otherwise the code will not work due to spacy.\\n'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,18 +51,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Lovepreet Singh\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pdfplumber\n",
     "import pandas as pd\n",
@@ -75,28 +66,29 @@
     "from tqdm import tqdm  # For progress tracking\n",
     "from langdetect import detect  # For language detection\n",
     "import spacy  # For Dutch and French tokenization\n",
-    "import bertopic # For topic modeling"
+    "import bertopic # For topic modeling\n",
+    "from typing import List, Dict, Any\n",
+    "import logging"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[WinError 3] The system cannot find the path specified: 'papers'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[7], line 151\u001b[0m\n\u001b[0;32m    148\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAll PDFs processed! CSV saved at: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00moutput_csv_path\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    150\u001b[0m \u001b[38;5;66;03m# Run the function to process all PDFs\u001b[39;00m\n\u001b[1;32m--> 151\u001b[0m \u001b[43mprocess_all_pdfs\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpdf_folder\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moutput_csv_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    153\u001b[0m \u001b[38;5;66;03m# Load CSV and display first few rows\u001b[39;00m\n\u001b[0;32m    154\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(output_csv_path)\n",
-      "Cell \u001b[1;32mIn[7], line 133\u001b[0m, in \u001b[0;36mprocess_all_pdfs\u001b[1;34m(pdf_folder, output_csv_path)\u001b[0m\n\u001b[0;32m    130\u001b[0m all_text_data \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m    132\u001b[0m \u001b[38;5;66;03m# Get list of PDF files\u001b[39;00m\n\u001b[1;32m--> 133\u001b[0m pdf_files \u001b[38;5;241m=\u001b[39m [f \u001b[38;5;28;01mfor\u001b[39;00m f \u001b[38;5;129;01min\u001b[39;00m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlistdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpdf_folder\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mif\u001b[39;00m f\u001b[38;5;241m.\u001b[39mendswith(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m.pdf\u001b[39m\u001b[38;5;124m\"\u001b[39m)]\n\u001b[0;32m    135\u001b[0m \u001b[38;5;66;03m# Use multiprocessing to process PDFs in parallel\u001b[39;00m\n\u001b[0;32m    136\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m ProcessPoolExecutor() \u001b[38;5;28;01mas\u001b[39;00m executor:\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 3] The system cannot find the path specified: 'papers'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-02-24 01:53:29,737 - ERROR - The folder \\papers does not exist.\n",
+      "2025-02-24 01:53:29,737 - ERROR - CSV file csv\\all_cleaned_pdf.csv does not exist.\n"
      ]
     }
    ],
    "source": [
+    "# Configure logging\n",
+    "logging.basicConfig(level=logging.INFO, format='%(asctime)s - %(levelname)s - %(message)s')\n",
+    "\n",
     "# Ensure nltk sentence tokenizer is downloaded\n",
     "nltk.download('punkt', quiet=True)\n",
     "from nltk.tokenize import sent_tokenize\n",
@@ -109,23 +101,24 @@
     "nlp_fr = spacy.load(\"fr_core_news_sm\")  # French\n",
     "\n",
     "# Folder containing the PDFs\n",
-    "pdf_folder = r\"papers\"\n",
-    "output_csv_path = r\"csv/all_cleaned_pdf.csv\"\n",
+    "pdf_folder = r\"\\papers\"\n",
+    "output_csv_path = r\"csv\\all_cleaned_pdf.csv\"\n",
     "\n",
     "# Compile regex patterns for efficiency\n",
     "EXTRA_SPACES_PATTERN = re.compile(r\"\\s{2,}\")\n",
     "PAGE_NUM_PATTERN = re.compile(r\"Page \\d+\")\n",
     "LINE_BREAKS_PATTERN = re.compile(r\"\\n+\")\n",
     "\n",
-    "# Function to detect language of a text\n",
-    "def detect_language(text):\n",
+    "def detect_language(text: str) -> str:\n",
+    "    \"\"\"Detect the language of a given text.\"\"\"\n",
     "    try:\n",
     "        return detect(text)\n",
-    "    except:\n",
+    "    except Exception as e:\n",
+    "        logging.warning(f\"Language detection failed: {e}\")\n",
     "        return \"en\"  # Default to English if detection fails\n",
     "\n",
-    "# Function to split long merged words into meaningful words (English only)\n",
-    "def split_long_words(text, language=\"en\"):\n",
+    "def split_long_words(text: str, language: str = \"en\") -> str:\n",
+    "    \"\"\"Split long merged words into meaningful words (English only).\"\"\"\n",
     "    if not isinstance(text, str) or language != \"en\":\n",
     "        return text  # Return as is if not a string or not English\n",
     "    \n",
@@ -141,8 +134,8 @@
     "    \n",
     "    return \" \".join(processed_text)\n",
     "\n",
-    "# Function to tokenize sentences based on language\n",
-    "def tokenize_sentences(text, language):\n",
+    "def tokenize_sentences(text: str, language: str) -> List[str]:\n",
+    "    \"\"\"Tokenize sentences based on language.\"\"\"\n",
     "    if language == \"en\":\n",
     "        return sent_tokenize(text)  # Use nltk for English\n",
     "    elif language == \"nl\":\n",
@@ -154,8 +147,8 @@
     "    else:\n",
     "        return sent_tokenize(text)  # Default to nltk for other languages\n",
     "\n",
-    "# Function to extract and clean sentences from a PDF\n",
-    "def extract_clean_sentences_from_pdf(pdf_path):\n",
+    "def extract_clean_sentences_from_pdf(pdf_path: str) -> List[Dict[str, Any]]:\n",
+    "    \"\"\"Extract and clean sentences from a PDF.\"\"\"\n",
     "    text_data = []\n",
     "    headers = Counter()\n",
     "    footers = Counter()\n",
@@ -215,27 +208,38 @@
     "\n",
     "    return text_data\n",
     "\n",
-    "# Function to process a single PDF and return its data\n",
-    "def process_pdf(pdf_file):\n",
+    "def process_pdf(pdf_file: str) -> List[Dict[str, Any]]:\n",
+    "    \"\"\"Process a single PDF and return its data.\"\"\"\n",
     "    pdf_path = os.path.join(pdf_folder, pdf_file)\n",
     "    try:\n",
     "        return extract_clean_sentences_from_pdf(pdf_path)\n",
     "    except Exception as e:\n",
-    "        print(f\"Error processing {pdf_file}: {e}\")\n",
+    "        logging.error(f\"Error processing {pdf_file}: {e}\")\n",
     "        return []\n",
     "\n",
-    "# Function to process all PDFs in the folder and save to CSV\n",
-    "def process_all_pdfs(pdf_folder, output_csv_path):\n",
+    "def process_all_pdfs(pdf_folder: str, output_csv_path: str) -> None:\n",
+    "    \"\"\"Process all PDFs in the folder and save to CSV.\"\"\"\n",
+    "    if not os.path.exists(pdf_folder):\n",
+    "        logging.error(f\"The folder {pdf_folder} does not exist.\")\n",
+    "        return\n",
+    "\n",
     "    all_text_data = []\n",
     "\n",
     "    # Get list of PDF files\n",
     "    pdf_files = [f for f in os.listdir(pdf_folder) if f.endswith(\".pdf\")]\n",
     "\n",
+    "    if not pdf_files:\n",
+    "        logging.warning(f\"No PDF files found in the folder {pdf_folder}.\")\n",
+    "        return\n",
+    "\n",
     "    # Use multiprocessing to process PDFs in parallel\n",
-    "    with ProcessPoolExecutor() as executor:\n",
+    "    with ProcessPoolExecutor(max_workers=4) as executor:  # Limit the number of workers\n",
     "        futures = {executor.submit(process_pdf, pdf_file): pdf_file for pdf_file in pdf_files}\n",
     "        for future in tqdm(as_completed(futures), total=len(pdf_files), desc=\"Processing PDFs\"):\n",
-    "            all_text_data.extend(future.result())\n",
+    "            try:\n",
+    "                all_text_data.extend(future.result())\n",
+    "            except Exception as e:\n",
+    "                logging.error(f\"Error processing future: {e}\")\n",
     "\n",
     "    # Save to a single CSV file\n",
     "    df = pd.DataFrame(all_text_data)\n",
@@ -244,17 +248,18 @@
     "    os.makedirs(os.path.dirname(output_csv_path), exist_ok=True)\n",
     "\n",
     "    df.to_csv(output_csv_path, index=False, encoding='utf-8')\n",
-    "    print(f\"All PDFs processed! CSV saved at: {output_csv_path}\")\n",
+    "    logging.info(f\"All PDFs processed! CSV saved at: {output_csv_path}\")\n",
     "\n",
     "# Run the function to process all PDFs\n",
     "process_all_pdfs(pdf_folder, output_csv_path)\n",
     "\n",
     "# Load CSV and display first few rows\n",
-    "df = pd.read_csv(output_csv_path)\n",
-    "\n",
-    "# Display the cleaned DataFrame\n",
-    "print(\" Extracted and Cleaned Sentences DataFrame:\")\n",
-    "print(df.head())  # Display the first few rows of cleaned sentences"
+    "if os.path.exists(output_csv_path):\n",
+    "    df = pd.read_csv(output_csv_path)\n",
+    "    logging.info(\"Extracted and Cleaned Sentences DataFrame:\")\n",
+    "    logging.info(df.head())  # Display the first few rows of cleaned sentences\n",
+    "else:\n",
+    "    logging.error(f\"CSV file {output_csv_path} does not exist.\")"
    ]
   },
   {
