--- a/BERTtopicSpacy.ipynb
+++ b/BERTtopicSpacy.ipynb
@@ -19,7 +19,7 @@
     {
      "data": {
       "text/plain": [
-       "'\\nNeeded dependancies:\\n    - spacy\\n    - pdfplumber\\n    - bertopic\\n    - pandas\\n    - numpy\\n    - matplotlib\\n    - wordcloud\\n    - nltk\\n    - gensim\\n    - scikit-learn\\n    - scipy\\n    - tqdm\\npip install pdfplumber bertopic nltk pandas spacy numpy matplotlib wordcloud gensim scikit-learn scipy tqdm wordsegment\\npython -m spacy download fr_core_web_sm\\npython -m spaCy download nl_core_web_md\\nUse the following Python version 3.12.0 otherwise the code will not work due to spacy.\\n'"
+       "'\\n# PDF Text Extraction and Topic Modeling\\n\\nThis program extracts text from PDFs, cleans it, and performs topic modeling using BERTopic.\\n\\n## Dependencies\\n- pdfplumber\\n- pandas\\n- nltk\\n- spacy\\n- bertopic\\n- langdetect\\n- wordsegment\\n\\n## Usage\\n1. Place your PDFs in the `papers` folder.\\n2. Run the script to extract, clean, and analyze the text.\\n3. The cleaned data will be saved to `csv/all_cleaned_pdf.csv`.\\n4. Topic modeling results will be visualized using BERTopic.\\n\\n\\npip install pdfplumber bertopic nltk pandas spacy numpy matplotlib wordcloud gensim scikit-learn scipy tqdm wordsegment langdetect\\npython -m spacy download fr_core_web_sm\\npython -m spacy download nl_core_web_md\\npython -m spacy download en_core_web_md\\nUse the following Python version 3.12.0 otherwise the code will not work due to spacy.\\n'"
       ]
      },
      "execution_count": 1,
@@ -33,15 +33,6 @@
     "\n",
     "This program extracts text from PDFs, cleans it, and performs topic modeling using BERTopic.\n",
     "\n",
-    "## Dependencies\n",
-    "- pdfplumber\n",
-    "- pandas\n",
-    "- nltk\n",
-    "- spacy\n",
-    "- bertopic\n",
-    "- langdetect\n",
-    "- wordsegment\n",
-    "\n",
     "## Usage\n",
     "1. Place your PDFs in the `papers` folder.\n",
     "2. Run the script to extract, clean, and analyze the text.\n",
@@ -49,7 +40,7 @@
     "4. Topic modeling results will be visualized using BERTopic.\n",
     "\n",
     "\n",
-    "pip install pdfplumber bertopic nltk pandas spacy numpy matplotlib wordcloud gensim scikit-learn scipy tqdm wordsegment langdetect\n",
+    "## Requirements\n",
     "python -m spacy download fr_core_web_sm\n",
     "python -m spacy download nl_core_web_md\n",
     "python -m spacy download en_core_web_md\n",
@@ -72,22 +63,23 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
+    "import csv\n",
+    "import logging\n",
     "import os\n",
     "import re\n",
     "from collections import Counter\n",
-    "import nltk\n",
-    "from wordsegment import load, segment\n",
     "from concurrent.futures import ProcessPoolExecutor, as_completed\n",
-    "from tqdm import tqdm  # For progress tracking\n",
-    "from langdetect import detect  # For language detection\n",
-    "import spacy  # For Dutch and French tokenization\n",
-    "import bertopic # For topic modeling\n",
+    "from multiprocessing import Lock\n",
     "from typing import List, Dict, Any\n",
-    "import logging\n",
-    "import fitz  # PyMuPDF\n",
-    "import csv\n",
-    "import unicodedata"
+    "\n",
+    "import bertopic  # For topic modeling\n",
+    "import nltk\n",
+    "import pandas as pd\n",
+    "import pdfplumber\n",
+    "import spacy  # For Dutch and French tokenization\n",
+    "from langdetect import detect, LangDetectException  # For language detection\n",
+    "from tqdm import tqdm  # For progress tracking\n",
+    "from wordsegment import load, segment"
    ]
   },
   {
@@ -309,7 +301,7 @@
    "outputs": [],
    "source": [
     "# Load spaCy's English NER model\n",
-    "nlp = spacy.load(detect_language(df['sentence_clean'].iloc[0]) + \"_core_web_sm\")\n",
+    "nlp = spacy.load('en_core_web_sm')\n",
     "\n",
     "# Function to remove geographic entities (cities, countries, locations)\n",
     "def remove_geographical_entities(text):\n",
@@ -335,7 +327,7 @@
    "outputs": [],
    "source": [
     "# Load the spaCy model (use 'en_core_web_sm' for small model)\n",
-    "nlp = spacy.load(detect_language(df['sentence_clean'].iloc[0]) + \"_core_web_sm\")\n",
+    "nlp = spacy.load('en_core_web_sm')\n",
     "\n",
     "# Minimum word length threshold\n",
     "MIN_WORD_SIZE = 4\n",
