Changing the code to the newer version.

--- a/BERTtopicSpacy.ipynb
+++ b/BERTtopicSpacy.ipynb
@@ -97,87 +97,119 @@
     }
    ],
    "source": [
-    "import pdfplumber\n",
-    "import re\n",
-    "import pandas as pd\n",
     "import os\n",
+    "import logging\n",
+    "import pdfplumber\n",
+    "import pandas as pd\n",
     "import spacy\n",
     "from langdetect import detect, LangDetectException\n",
+    "from tqdm import tqdm\n",
     "\n",
-    "# Load large spaCy models for English, Dutch, and French\n",
-    "nlp_en = spacy.load(\"en_core_web_lg\")  # Large English model\n",
-    "nlp_nl = spacy.load(\"nl_core_news_lg\")  # Large Dutch model\n",
-    "nlp_fr = spacy.load(\"fr_core_news_lg\")  # Large French model\n",
+    "# Configure logging\n",
+    "logging.basicConfig(level=logging.INFO, format='%(asctime)s - %(levelname)s - %(message)s')\n",
+    "\n",
+    "# Paths\n",
+    "pdf_directory = r'papers'  # Replace with the path to your PDF folder\n",
+    "output_csv = r'csv/cleaned.csv'  # Replace with the desired output CSV file name\n",
+    "\n",
+    "# Validate directory existence\n",
+    "if not os.path.exists(pdf_directory):\n",
+    "    logging.error(f\"PDF directory does not exist: {pdf_directory}\")\n",
+    "    exit(1)\n",
+    "\n",
+    "# Load spaCy models for efficiency\n",
+    "nlp_models = {\n",
+    "    'en': spacy.load(\"en_core_web_lg\"),\n",
+    "    'nl': spacy.load(\"nl_core_news_lg\"),\n",
+    "    'fr': spacy.load(\"fr_core_news_lg\")\n",
+    "}\n",
+    "\n",
+    "def validate_pdf_path(pdf_path):\n",
+    "    \"\"\"Validate that the PDF path exists and is readable.\"\"\"\n",
+    "    if not os.path.exists(pdf_path):\n",
+    "        logging.error(f\"PDF file does not exist: {pdf_path}\")\n",
+    "        return False\n",
+    "    if not os.access(pdf_path, os.R_OK):\n",
+    "        logging.error(f\"PDF file is not readable: {pdf_path}\")\n",
+    "        return False\n",
+    "    return True\n",
     "\n",
     "def extract_text_from_pdf(pdf_path):\n",
     "    \"\"\"Extract text from a PDF file using pdfplumber.\"\"\"\n",
-    "    text = ''\n",
-    "    with pdfplumber.open(pdf_path) as pdf:\n",
-    "        for page in pdf.pages:\n",
-    "            text += page.extract_text()\n",
-    "    return text\n",
+    "    try:\n",
+    "        text = ''\n",
+    "        with pdfplumber.open(pdf_path) as pdf:\n",
+    "            for page in pdf.pages:\n",
+    "                extracted = page.extract_text()\n",
+    "                if extracted:\n",
+    "                    text += extracted + \" \"\n",
+    "        return text.strip()\n",
+    "    except Exception as e:\n",
+    "        logging.error(f\"Error extracting {pdf_path}: {e}\")\n",
+    "        return \"\"\n",
     "\n",
     "def detect_language(text):\n",
-    "    \"\"\"\n",
-    "    Detect the language of the text using langdetect.\n",
-    "    \n",
-    "    Args:\n",
-    "        text (str): The input text.\n",
-    "    \n",
-    "    Returns:\n",
-    "        str: The detected language code ('en', 'nl', 'fr') or 'en' as default.\n",
-    "    \"\"\"\n",
+    "    \"\"\"Detect the language of the text using langdetect.\"\"\"\n",
     "    try:\n",
     "        language = detect(text)\n",
-    "        # Map langdetect's language codes to spaCy's model names\n",
-    "        if language in ['en', 'nl', 'fr']:\n",
-    "            return language\n",
-    "        else:\n",
-    "            return 'en'  # Default to English if the detected language is not supported\n",
-    "    except LangDetectException:\n",
-    "        return 'en'  # Default to English if language detection fails\n",
+    "        if language not in nlp_models:\n",
+    "            logging.warning(f\"Unsupported language detected ({language}), defaulting to English.\")\n",
+    "            return 'en'\n",
+    "        return language\n",
+    "    except LangDetectException as e:\n",
+    "        logging.error(f\"Language detection error: {e}\")\n",
+    "        return 'en'\n",
     "\n",
     "def clean_text_with_spacy(text, language):\n",
-    "    \"\"\"Clean the text using spaCy based on the detected language.\"\"\"\n",
-    "    if language == 'en':\n",
-    "        nlp = nlp_en\n",
-    "    elif language == 'nl':\n",
-    "        nlp = nlp_nl\n",
-    "    elif language == 'fr':\n",
-    "        nlp = nlp_fr\n",
-    "    else:\n",
-    "        nlp = nlp_en  # Default to English\n",
-    "\n",
-    "    doc = nlp(text)\n",
-    "    cleaned_tokens = [token.lemma_ for token in doc if not token.is_stop and not token.is_punct]\n",
-    "    cleaned_text = ' '.join(cleaned_tokens)\n",
-    "    return cleaned_text\n",
+    "    \"\"\"Efficiently clean text using spaCy.\"\"\"\n",
+    "    try:\n",
+    "        nlp = nlp_models.get(language, nlp_models['en'])\n",
+    "        doc = nlp(text)  # Direct processing\n",
+    "        return ' '.join(token.lemma_ for token in doc if not token.is_stop and not token.is_punct)\n",
+    "    except Exception as e:\n",
+    "        logging.error(f\"Error cleaning text: {e}\")\n",
+    "        return \"\"\n",
     "\n",
     "def process_pdfs(pdf_paths):\n",
-    "    \"\"\"Process multiple PDFs and return cleaned text.\"\"\"\n",
-    "    cleaned_texts = []\n",
-    "    for pdf_path in pdf_paths:\n",
-    "        text = extract_text_from_pdf(pdf_path)\n",
-    "        language = detect_language(text)\n",
-    "        cleaned_text = clean_text_with_spacy(text, language)\n",
-    "        cleaned_texts.append(cleaned_text)\n",
-    "    return cleaned_texts\n",
+    "    \"\"\"Process multiple PDFs sequentially.\"\"\"\n",
+    "    results = []\n",
+    "    for pdf_path in tqdm(pdf_paths, desc=\"Processing PDFs\"):\n",
+    "        try:\n",
+    "            result = process_pdf(pdf_path)\n",
+    "            if result:\n",
+    "                results.append(result)\n",
+    "        except Exception as e:\n",
+    "            logging.error(f\"Error processing PDF: {e}\")\n",
+    "    return results\n",
+    "\n",
+    "def process_pdf(pdf_path):\n",
+    "    \"\"\"Extract, detect language, and clean text from a single PDF.\"\"\"\n",
+    "    if not validate_pdf_path(pdf_path):\n",
+    "        return None  # Skip invalid PDFs\n",
+    "    text = extract_text_from_pdf(pdf_path)\n",
+    "    if not text:\n",
+    "        return None  # Skip empty PDFs\n",
+    "    language = detect_language(text)\n",
+    "    cleaned_text = clean_text_with_spacy(text, language)\n",
+    "    return cleaned_text\n",
     "\n",
     "def write_to_csv(data, output_csv):\n",
-    "    \"\"\"Write the cleaned text data to a CSV file.\"\"\"\n",
-    "    df = pd.DataFrame(data, columns=['Cleaned_Text'])\n",
-    "    df.to_csv(output_csv, index=False, encoding='utf-8')\n",
+    "    \"\"\"Write cleaned text data to a CSV file.\"\"\"\n",
+    "    try:\n",
+    "        df = pd.DataFrame(data, columns=['Cleaned_Text'])\n",
+    "        os.makedirs(os.path.dirname(output_csv), exist_ok=True)  # Ensure directory exists\n",
+    "        df.to_csv(output_csv, index=False, encoding='utf-8')\n",
+    "        logging.info(f\"Saved cleaned data to {output_csv}\")\n",
+    "    except Exception as e:\n",
+    "        logging.error(f\"Error writing to CSV: {e}\")\n",
     "\n",
-    "def main(pdf_directory, output_csv):\n",
-    "    \"\"\"Main function to process PDFs and write to CSV.\"\"\"\n",
-    "    pdf_paths = [os.path.join(pdf_directory, f) for f in os.listdir(pdf_directory) if f.endswith('.pdf')]\n",
-    "    cleaned_texts = process_pdfs(pdf_paths)\n",
+    "# Process PDFs and write to CSV\n",
+    "pdf_paths = [os.path.join(pdf_directory, file) for file in os.listdir(pdf_directory) if file.endswith(\".pdf\")]\n",
+    "cleaned_texts = process_pdfs(pdf_paths)\n",
+    "if cleaned_texts:\n",
     "    write_to_csv(cleaned_texts, output_csv)\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "    pdf_directory = r'papers'  # Replace with the path to your PDF folder\n",
-    "    output_csv = r'csv/cleaned.csv'  # Replace with the desired output CSV file name\n",
-    "    main(pdf_directory, output_csv)"
+    "else:\n",
+    "    logging.error(\"No cleaned text data to save.\")\n"
    ]
   },
   {
