Increasing efficiency, Output_csv, Adding skip if an unsupported language is found, Removing parallel processing, Now writing text per scan to csv instead of using high memory and keeping it till the end, using links instead of hardcode in step 2.

--- a/BERTtopicSpacy.ipynb
+++ b/BERTtopicSpacy.ipynb
@@ -97,20 +97,12 @@
     }
    ],
    "source": [
-    "import os\n",
-    "import logging\n",
-    "import pdfplumber\n",
-    "import pandas as pd\n",
-    "import spacy\n",
-    "from langdetect import detect, LangDetectException\n",
-    "from tqdm import tqdm\n",
-    "\n",
     "# Configure logging\n",
     "logging.basicConfig(level=logging.INFO, format='%(asctime)s - %(levelname)s - %(message)s')\n",
     "\n",
     "# Paths\n",
     "pdf_directory = r'papers'  # Replace with the path to your PDF folder\n",
-    "output_csv = r'csv/cleaned.csv'  # Replace with the desired output CSV file name\n",
+    "output_csv = r'csv/cleanedpdfs.csv'  # Replace with the desired output CSV file name\n",
     "\n",
     "# Validate directory existence\n",
     "if not os.path.exists(pdf_directory):\n",
@@ -152,13 +144,13 @@
     "    \"\"\"Detect the language of the text using langdetect.\"\"\"\n",
     "    try:\n",
     "        language = detect(text)\n",
-    "        if language not in nlp_models:\n",
-    "            logging.warning(f\"Unsupported language detected ({language}), defaulting to English.\")\n",
-    "            return 'en'\n",
-    "        return language\n",
-    "    except LangDetectException as e:\n",
-    "        logging.error(f\"Language detection error: {e}\")\n",
-    "        return 'en'\n",
+    "        if language in nlp_models:\n",
+    "            return language\n",
+    "        logging.warning(f\"Unsupported language ({language}). Skipping.\")\n",
+    "        return None  # Instead of defaulting to 'en'\n",
+    "    except LangDetectException:\n",
+    "        logging.error(\"Language detection failed.\")\n",
+    "        return None\n",
     "\n",
     "def clean_text_with_spacy(text, language):\n",
     "    \"\"\"Efficiently clean text using spaCy.\"\"\"\n",
@@ -171,37 +163,27 @@
     "        return \"\"\n",
     "\n",
     "def process_pdfs(pdf_paths):\n",
-    "    \"\"\"Process multiple PDFs sequentially.\"\"\"\n",
+    "    \"\"\"Extract, detect language, and clean text from multiple PDFs sequentially.\"\"\"\n",
     "    results = []\n",
     "    for pdf_path in tqdm(pdf_paths, desc=\"Processing PDFs\"):\n",
-    "        try:\n",
-    "            result = process_pdf(pdf_path)\n",
-    "            if result:\n",
-    "                results.append(result)\n",
-    "        except Exception as e:\n",
-    "            logging.error(f\"Error processing PDF: {e}\")\n",
+    "        if validate_pdf_path(pdf_path):\n",
+    "            text = extract_text_from_pdf(pdf_path)\n",
+    "            if text:\n",
+    "                language = detect_language(text)\n",
+    "                cleaned_text = clean_text_with_spacy(text, language)\n",
+    "                if cleaned_text:\n",
+    "                    results.append(cleaned_text)\n",
     "    return results\n",
     "\n",
-    "def process_pdf(pdf_path):\n",
-    "    \"\"\"Extract, detect language, and clean text from a single PDF.\"\"\"\n",
-    "    if not validate_pdf_path(pdf_path):\n",
-    "        return None  # Skip invalid PDFs\n",
-    "    text = extract_text_from_pdf(pdf_path)\n",
-    "    if not text:\n",
-    "        return None  # Skip empty PDFs\n",
-    "    language = detect_language(text)\n",
-    "    cleaned_text = clean_text_with_spacy(text, language)\n",
-    "    return cleaned_text\n",
-    "\n",
     "def write_to_csv(data, output_csv):\n",
-    "    \"\"\"Write cleaned text data to a CSV file.\"\"\"\n",
-    "    try:\n",
-    "        df = pd.DataFrame(data, columns=['Cleaned_Text'])\n",
-    "        os.makedirs(os.path.dirname(output_csv), exist_ok=True)  # Ensure directory exists\n",
-    "        df.to_csv(output_csv, index=False, encoding='utf-8')\n",
-    "        logging.info(f\"Saved cleaned data to {output_csv}\")\n",
-    "    except Exception as e:\n",
-    "        logging.error(f\"Error writing to CSV: {e}\")\n",
+    "    \"\"\"Write cleaned text data to a CSV file efficiently.\"\"\"\n",
+    "    os.makedirs(os.path.dirname(output_csv), exist_ok=True)\n",
+    "    with open(output_csv, 'w', newline='', encoding='utf-8') as file:\n",
+    "        writer = csv.writer(file)\n",
+    "        writer.writerow([\"Cleaned_Text\"])\n",
+    "        for row in data:\n",
+    "            writer.writerow([row])\n",
+    "    logging.info(f\"Saved cleaned data to {output_csv}\")\n",
     "\n",
     "# Process PDFs and write to CSV\n",
     "pdf_paths = [os.path.join(pdf_directory, file) for file in os.listdir(pdf_directory) if file.endswith(\".pdf\")]\n",
@@ -245,8 +227,8 @@
    ],
    "source": [
     "# Load the data\n",
-    "df= pd.read_csv(r'csv/cleaned.csv')\n",
-    "df.head(100)"
+    "df = pd.read_csv(output_csv)\n",
+    "df.head(25)"
    ]
   },
   {
