--- a/BERTtopicSpacy.ipynb
+++ b/BERTtopicSpacy.ipynb
@@ -244,25 +244,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load spaCy model for Named Entity Recognition (NER).\n",
-    "# But because we are using the large English model, it is already loaded in the previous cell.\n",
-    "# We will check again the language of the text and use the appropriate model for NER.\n",
-    "\n",
-    "def remove_sensitive_info(text):\n",
-    "    \"\"\"\n",
+    "# Load and clean sensitive data\n",
+    "df = pd.read_csv(output_csv)\n",
+    "df = remove_sensitive_info(df, text_column='Cleaned_Text')\n",
+    "df.to_csv(output_csv, index=False, encoding='utf-8')  # Overwrite with cleaned data\n",
+    "logging.info(\"Sensitive information removed and CSV updated.\")\n",
+    "print(df.head(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
     "    Remove personal information such as names, dates, and numbers from the text.\n",
     "    Supports English, Dutch, and French languages.\n",
-    "    \n",
+    "\n",
     "    Args:\n",
     "        text (str): The input text containing potential personal information.\n",
-    "    \n",
+    "        nlp_en: spaCy model for English.\n",
+    "        nlp_nl: spaCy model for Dutch.\n",
+    "        nlp_fr: spaCy model for French.\n",
+    "\n",
     "    Returns:\n",
     "        str: The cleaned text with personal information removed.\n",
     "    \"\"\"\n",
-    "    if not isinstance(text, str):\n",
-    "        return \"\"  # Handle non-string values\n",
+    "    \n",
+    "def remove_sensitive_info(text, nlp_en, nlp_nl, nlp_fr):\n",
+    "    \n",
+    "    if not isinstance(text, str) or not text.strip():\n",
+    "        return \"\"  # Handle non-string values or empty strings\n",
     "\n",
-    "    # Detect the language of the text\n",
+    "    # Detect the language of the text using the detect_language function\n",
     "    language = detect_language(text)\n",
     "\n",
     "    # Load the appropriate spaCy model based on the detected language\n",
@@ -278,17 +293,26 @@
     "    # Process the text with spaCy\n",
     "    doc = nlp(text)\n",
     "\n",
-    "    # Remove PERSON names using spaCy NER\n",
-    "    words = [token.text for token in doc if token.ent_type_ != \"PER\"]\n",
+    "    # Remove PERSON names, dates, and other sensitive entities using spaCy NER\n",
+    "    sensitive_entities = [\"PER\", \"DATE\", \"GPE\", \"LOC\", \"FAC\", \"ORG\"]\n",
+    "    cleaned_tokens = [\n",
+    "        token.text for token in doc \n",
+    "        if token.ent_type_ not in sensitive_entities and not token.is_punct\n",
+    "    ]\n",
     "\n",
-    "    # Join the remaining words into a single string\n",
-    "    cleaned_text = \" \".join(words)\n",
+    "    # Join the remaining tokens into a single string\n",
+    "    cleaned_text = \" \".join(cleaned_tokens)\n",
     "\n",
-    "    # Remove dates and numbers using regex\n",
-    "    cleaned_text = re.sub(r'\\b\\d{1,4}[-/]\\d{1,2}[-/]\\d{1,4}\\b', '', cleaned_text)  # Remove dates (YYYY-MM-DD, DD/MM/YYYY)\n",
+    "    # Remove standalone numbers and other sensitive patterns using regex\n",
     "    cleaned_text = re.sub(r'\\b\\d+\\b', '', cleaned_text)  # Remove standalone numbers\n",
+    "    cleaned_text = re.sub(r'\\b\\d{1,4}[-/]\\d{1,2}[-/]\\d{1,4}\\b', '', cleaned_text)  # Remove dates (YYYY-MM-DD, DD/MM/YYYY)\n",
+    "    cleaned_text = re.sub(r'\\b[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[A-Z|a-z]{2,}\\b', '', cleaned_text)  # Remove email addresses\n",
+    "    cleaned_text = re.sub(r'\\bhttps?://\\S+\\b', '', cleaned_text)  # Remove URLs\n",
     "\n",
-    "    return cleaned_text.strip()\n"
+    "    # Remove extra spaces and leading/trailing whitespace\n",
+    "    cleaned_text = re.sub(r'\\s+', ' ', cleaned_text).strip()\n",
+    "\n",
+    "    return cleaned_text"
    ]
   },
   {
